5월3일오전학원

--- a/flaskblog/templates/about.html
+++ b/flaskblog/templates/about.html
@@ -1,6 +1,9 @@
 {% extends "layout.html" %}
 {% block content %}
-    <h1>About Page</h1>
+    <h1 align="center">About Page</h1>
+    <iframe src="http://rpubs.com/larryback/try_this_18th_of_March" frameborder="0" width="100%"
+    marginwidth="0" marginheight="0" scrolling="yes" style='height:100vh; margin-left: 0px; width: 1150px;'>
+   
 {% endblock content %}
 
 
