--- a/flaskblog/templates/layout.html
+++ b/flaskblog/templates/layout.html
@@ -27,7 +27,8 @@
           <div class="collapse navbar-collapse" id="navbarToggle">
             <div class="navbar-nav mr-auto">
               <a class="nav-item nav-link" href="{{ url_for('home') }}">Home</a>
-              <a class="nav-item nav-link" href="{{ url_for('about') }}">About</a>
+              <a class="nav-item nav-link" href="{{ url_for('introduction') }}">Introduction</a>
+              <a class="nav-item nav-link" href="{{ url_for('supply_vs_price') }}">Supply vs Price</a>
             </div>
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
