--- a/flaskblog/templates/supply_vs_price.html
+++ b/flaskblog/templates/supply_vs_price.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block content %}
-    <h1 align="center">About Page</h1>
-    <iframe src="http://rpubs.com/larryback/try_this_18th_of_March" frameborder="0" width="100%"
+    <h1 align="center">Supply vs Price Page</h1>
+    <iframe src="http://rpubs.com/larryback/493954" frameborder="0" width="100%"
     marginwidth="0" marginheight="0" scrolling="yes" style='height:100vh; margin-left: 0px; width: 1150px;'>
    
 {% endblock content %}
