5월9일오후학원

--- a/flaskblog/templates/layout.html
+++ b/flaskblog/templates/layout.html
@@ -29,6 +29,7 @@
               <a class="nav-item nav-link" href="{{ url_for('home') }}">Home</a>
               <a class="nav-item nav-link" href="{{ url_for('introduction') }}">Introduction</a>
               <a class="nav-item nav-link" href="{{ url_for('supply_vs_price') }}">Supply vs Price</a>
+              <a class="nav-item nav-link" href="{{ url_for('temperature_and_precipitation') }}">Temperature & Precipitation</a>
             </div>
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
