5월14일오후집

--- a/flaskblog/templates/layout.html
+++ b/flaskblog/templates/layout.html
@@ -89,4 +89,17 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
 </body>
+<!-- Footer -->
+<footer class="page-footer font-small blue">
+
+  <!-- Copyright -->
+  <div class="footer-copyright text-center py-3">© 2019 GitHub, Inc.
+    <a href="https://github.com/larryback/Flask-App-Project">
+      <img src="static/github_logo.PNG" width="45" height="45">    
+    </a>
+  </div>
+  <!-- Copyright -->
+
+</footer>
+<!-- Footer -->
 </html>
