5월14일집오후01

--- a/flaskblog/templates/layout.html
+++ b/flaskblog/templates/layout.html
@@ -95,7 +95,7 @@
   <!-- Copyright -->
   <div class="footer-copyright text-center py-3">© 2019 GitHub, Inc.
     <a href="https://github.com/larryback/Flask-App-Project">
-      <img src="static/github_logo.PNG" width="45" height="45">    
+      <img src="static/cat_logo.PNG" width="45" height="45">    
     </a>
   </div>
   <!-- Copyright -->
