--- a/flaskblog/templates/layout.html
+++ b/flaskblog/templates/layout.html
@@ -91,6 +91,9 @@
 </body>
 <!-- Footer -->
 <footer class="page-footer font-small blue">
+    <address>
+        <p align="center">larryback@naver.com</p>
+    </address>
 
   <!-- Copyright -->
   <div class="footer-copyright text-center py-3">© 2019 GitHub, Inc.
